Load sensors from backend, rework api state management, add endpoints for sensors, measurements now belong to a sensor
