# pool-temp-backend/src/measurement/measurement.controller.ts
@@ -1,4 +1,12 @@
-import { Body, Controller, Get, Post, Query } from '@nestjs/common';
+import {
+  Body,
+  Controller,
+  Get,
+  Param,
+  ParseUUIDPipe,
+  Post,
+  Query,
+} from '@nestjs/common';
 import { MeasurementService } from './measurement.service';
 import { MeasurementDto } from './dto/measurement.dto';
 import { MeasurementListDto } from './dto/measurement-list.dto';
@@ -9,17 +17,21 @@ export class MeasurementController {
   constructor(private readonly measurementService: MeasurementService) {}
   // returns the current temperature
   @Get('current')
-  public async getCurrentMeasurement(): Promise<MeasurementDto> {
+  public async getCurrentMeasurement(
+    @Param('sensorId', new ParseUUIDPipe()) sensorId: string,
+  ): Promise<MeasurementDto> {
     return MeasurementDto.createFromMeasurement(
-      await this.measurementService.getCurrentMeasurement(),
+      await this.measurementService.getCurrentMeasurement(sensorId),
     );
   }
 
   @Get()
   public async searchMeasurements(
     @Query() searchDto: SearchMeasurementsDto,
+    @Param('sensorId', new ParseUUIDPipe()) sensorId: string,
   ): Promise<MeasurementListDto> {
     const measurements = await this.measurementService.searchMeasurements(
+      sensorId,
       searchDto.startDate,
       searchDto.endDate,
     );
@@ -33,10 +45,14 @@ export class MeasurementController {
 
   // create a new measurement
   @Post()
-  public async createMeasurement(@Body() measurementDto: MeasurementDto) {
+  public async createMeasurement(
+    @Body() measurementDto: MeasurementDto,
+    @Param('sensorId', new ParseUUIDPipe()) sensorId: string,
+  ) {
     console.log(measurementDto);
     return MeasurementDto.createFromMeasurement(
       await this.measurementService.createMeasurement(
+        sensorId,
         MeasurementDto.mapToMeasurement(measurementDto),
       ),
     );
